lazylibrarian/lazylibrarian-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: lazylibrarian
  namespace: default
  labels:
    app: lazylibrarian
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lazylibrarian
  template:
    metadata:
      labels:
        app: lazylibrarian
    spec:
      containers:
      - name: lazylibrarian
        image: linuxserver/lazylibrarian
        ports:
          - containerPort: 5299
        volumeMounts:
          - mountPath: /config
            name: config
          - mountPath: /books
            name: books
          - mountPath: /comics
            name: comics
          - mountPath: /downloads
            name: downloads
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: lazylibrarian
      - name: books
        hostPath:
          path: /mnt/share/eBooks
      - name: comics
        hostPath:
          path: /mnt/share/Comics
      - name: downloads
        hostPath:
          path: /mnt/share/Downloads/transmission
