lazylibrarian/lazylibrarian-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lazylibrarian
  namespace: default
spec:
  selector:
    app: lazylibrarian
  ports:
  - name: default
    port: 5299
    targetPort: 5299
